# OpenClaw-MoE-Orchestrator

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/tests/: test_repo_smoke.py
.github/workflows/: ci.yml  release.yml  security.yml
configs/: ds_config.json  ds_config_zero2.json  ollama_model_manifest.json
docs/: IMPLEMENTATION_GUIDE.md  PRODUCTION_AUDIT_REPORT.md  SOTA_RESEARCH_FINDINGS.md  mission_report.md  multi_asset_report.md  openclaw_local_ollama_integration.md  production_architecture.md  production_report.md
experiments/: download_crypto_data.py  moe_stress_test.py  moe_train.py  train_deepspeed.py  zero_sim.py
scripts/: autonomous_mission.py  beyond_sota_architecture.py  beyond_sota_architecture_old.py  beyond_sota_architecture_working.py  browser_news_oracle.py  deepspeed_runtime.py  inject_anomaly.py  integrated_orchestrator.py  moe_anomaly_detector.py  moe_correlation_detector.py  news_scraper_real.py  prepare_market_data.py  prepare_multi_asset_data.py  production_agent_orchestrator.py  production_orchestrator.py  production_orchestrator_real.py  real_news_scraper.py  run_production_with_real_data.py  self_audit.py  self_audit_production.py  visualize_anomalies.py  visualize_multi_anomalies.py
tests/: conftest.py  test_autonomous_mission.py  test_cli_local.py  test_deepspeed_runtime.py  test_gui.py  test_integrated_orchestrator.py  test_ollama_router.py  test_ollama_sync.py  test_openclaw_local.py  test_prepare_market_data.py  test_prepare_multi_asset_data.py
(+36 files in other folders)
