[build-system]
requires = ["setuptools==70.2.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-moe-orchestrator"
version = "0.1.0"
description = "Production-oriented market analysis and anomaly detection workflows built around OpenClaw Mixture-of-Experts orchestration."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OpenClaw Contributors" }]
keywords = ["deepspeed", "market-data", "mixture-of-experts", "openclaw", "orchestration"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
dependencies = [
  "deepspeed==0.18.7",
  "matplotlib==3.10.8",
  "numpy==2.3.5",
  "pandas==3.0.1",
  "requests==2.32.5",
  "torch==2.8.0",
  "yfinance==1.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "ruff==0.15.5",
]

[project.scripts]
openclaw-moe = "openclaw_moe_orchestrator.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["openclaw_moe_orchestrator*"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  ".venv",
  "artifacts",
  "data",
  "skills",
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"src/openclaw_moe_orchestrator/__main__.py" = ["E402"]
